--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,37 +4,25 @@
     </div>
     <!-- NEWS BLOCK -->
     <!--  -->
-    <p>{{editableTitle}}</p>
+    <div data-ng-repeat="n in lastNews(3) track by $index">
+        <!-- News Editor -->
+        <news-editor id-in-db="idInDB" id-in-json="idInJSON" data-ng-if="editMode && n.news_id == idInDB"></news-editor>
+        <!-- //News Editor -->
+        <div class="panel panel-info" data-ng-if="!editMode || (editMode && n.news_id != idInDB)">
+            <div class="panel-heading">
+                <h3 class="panel-title">{{n.title}}</h3>
+            </div>
+            <div class="panel-body" data-ta-bind data-ng-model="n.news">
+            </div>
+            <a data-ng-click="turnEditMode(n.news_id)" data-ng-if="currentUser.userRole == 'admin'">Edit
+                {{n.news_id}}</a>
 
-    <div class="panel panel-info" data-ng-repeat="n in lastNews(3) track by $index" data-ng-if="n.title!=null">
-        <div class="panel-heading">
-            <h3 class="panel-title" data-ng-if="!editMode || (editMode && n.news_id != idInDB)">{{n.title}}</h3>
-            <input type="text" class="form-control" data-ng-model="editable.title"
-                   data-ng-if="editMode && n.news_id == idInDB " required>
-        </div>
-        <div class="panel-body" data-ng-if="!editMode || (editMode && n.news_id != idInDB)" data-ta-bind
-             data-ng-model="n.news">
-        </div>
-        <a data-ng-click="turnEditMode(n.news_id)" data-ng-if="currentUser.userRole == 'admin'">Edit
-            {{n.news_id}}</a>
-
-        <div class="panel-body" data-ng-if="editMode && n.news_id == idInDB">
-            <div data-text-angular="" data-ng-model="editable.news"></div>
-            <button type="button" class="btn btn-success" data-ng-click="performEdit()">Сохранить</button>
-            <button type="button" class="btn btn-default" data-ng-click="cancelEdit()">Отменить</button>
-        </div>
-        <div data-ng-switch="n.importance" class="panel-footer">
-            <small><em>{{n.date_created|moment: 'lang': 'ru' | moment: 'format': 'LL'}}</em></small>
-            <span data-ng-switch-when="1" data-ng-if="!editMode || (editMode && n.news_id != idInDB)"
+            <div data-ng-switch="n.importance" class="panel-footer">
+                <small><em>{{n.date_created|moment: 'lang': 'ru' | moment: 'format': 'LL'}}</em></small>
+            <span data-ng-switch-when="1"
                   class="label label-warning pull-right">Обратите внимание</span>
-            <span data-ng-switch-when="2" data-ng-if="!editMode || (editMode && n.news_id != idInDB)"
+            <span data-ng-switch-when="2"
                   class="label label-danger pull-right">Важно</span>
-
-            <div class="btn-group pull-right" data-ng-if="editMode && n.news_id == idInDB">
-                <label class="ta-news-label" data-ng-model="editable.label" data-btn-radio="'1'" data-uncheckable><span
-                        class="label label-warning pull-right">Обратите внимание</span></label>
-                <label class="ta-news-label" data-ng-model="editable.label" data-btn-radio="'2'" data-uncheckable><span
-                        class="label label-danger pull-right">Важно</span></label>
             </div>
         </div>
     </div>
