--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,11 +4,12 @@
     </div>
     <!-- NEWS BLOCK -->
     <!--  -->
-    <div data-ng-repeat="n in lastNews(3) track by $index">
+    <div data-ng-repeat="n in currentPageNews(3) track by $index">
         <!-- News Editor -->
         <news-editor id-in-db="idInDB" id-in-json="idInJSON" data-ng-if="editMode && n.news_id == idInDB"></news-editor>
         <!-- //News Editor -->
-        <div class="panel panel-info" data-ng-if="!editMode || (editMode && n.news_id != idInDB)">
+        <div class="panel panel-info" data-ng-if="!editMode || (editMode && n.news_id != idInDB)"
+             data-ng-hide="!n.news_id">
             <div class="panel-heading">
                 <h3 class="panel-title">{{n.title}}</h3>
             </div>
@@ -31,12 +32,5 @@
         </div>
     </div>
     <!-- PAGER -->
-    <nav>
-        <ul class="pager">
-            <li class="previous" data-ng-click="prevPage()" data-ng-class="{'disabled': CurPage == totalPages}"><a
-                    href=""><span aria-hidden="true">&larr;</span> Старые</a></li>
-            <li class="next" data-ng-click="nextPage()" data-ng-class="{'disabled': CurPage == 1}"><a href="">Новые
-                <span aria-hidden="true">&rarr;</span></a></li>
-        </ul>
-    </nav>
+    <pager total-items="totalItems" ng-model="currentPage" items-per-page="3" next-text="Старые »" previous-text="« Новые"></pager>
 </article>
