--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,6 +141,7 @@ body
     margin: 0 auto;
     z-index: 1050;
     width: 100%;
+    /* todo: modal alert перекрывает элементы из-за ширины 100% */
 }
 
 .alert{
@@ -160,4 +161,38 @@ body
 {
     opacity: 1;
     filter: alpha(opacity=100);
+}
+
+.repeat-animation.ng-enter,
+.repeat-animation.ng-leave,
+.repeat-animation.ng-move {
+    -webkit-transition: 0.5s linear all;
+    transition: 0.5s linear all;
+    position:relative;
+}
+
+.repeat-animation.ng-enter {
+    top:-10px;
+    opacity:0;
+}
+.repeat-animation.ng-enter.ng-enter-active {
+    top:0;
+    opacity:1;
+}
+
+.repeat-animation.ng-leave {
+    top:0;
+    opacity:1;
+}
+.repeat-animation.ng-leave.ng-leave-active {
+    top:-10px;
+    opacity:0;
+}
+
+.repeat-animation.ng-move {
+    opacity:0.5;
+}
+.repeat-animation.ng-move.ng-move-active {
+    opacity:1;
+    top: -5px;
 }
