--- a/public/views/home.html
+++ b/public/views/home.html
@@ -7,7 +7,7 @@
     <!-- NEWS BLOCK -->
     <!--  -->
     <news-editor id-in-db="" id-in-json="" data-ng-if="postMode"></news-editor>
-    <div data-ng-repeat="n in currentPageNews(3) track by $index">
+    <div data-ng-repeat="n in currentPageNews(3) track by $index" class="animate-repeat">
         <!-- News Editor -->
         <news-editor id-in-db="idInDB" id-in-json="idInJSON" data-ng-if="editMode && n.news_id == idInDB"></news-editor>
         <!-- //News Editor -->
