--- a/public/views/discipline.html
+++ b/public/views/discipline.html
@@ -22,7 +22,8 @@
                 <br>
 
                 <div class="accordion-footer">
-                    <span data-ng-repeat="result in results" data-ng-if="lesson.lecture_id==result.lecture_id && currentUser.userRole != 'admin'">
+                    <span data-ng-repeat="result in results"
+                          data-ng-if="lesson.lecture_id==result.lecture_id && currentUser.userRole != 'admin'">
                     <span data-ng-if="result.result==1"
                           class="pull-right">Зачтено <span class="glyphicon glyphicon-ok"
                                                            aria-hidden="true"></span>
@@ -30,14 +31,15 @@
                     <span data-ng-if="result.result==0 && currentUser.userRole != 'admin'" class="pull-right">Не зачтено
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span></span>
                     </span>
+
                     <div class="pull-right">
                         <button type="button" class="btn btn-primary btn-xs" data-ng-click="turnEditMode(n.news_id)"
                                 data-ng-if="currentUser.userRole == 'admin'">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </button>
                         <button type="button" class="btn btn-danger btn-xs"
-                                data-ng-really-message="Вы собираетесь удалить запись <strong>«{{lesson.title}}»</strong> от {{lesson.date_created|moment: 'lang': 'ru' | moment: 'format': 'LL'}}<br>Продолжить?"
-                                data-ng-really-click="deletePost(lesson.lecture_id)"
+                                data-ng-really-message="Вы собираетесь удалить запись <strong>«{{lesson.title}}»</strong> от {{lesson.date_created|moment: 'lang': 'ru' | moment: 'format': 'LL'}} Будут также удалены вложения и результаты выполнения.<br>Продолжить?"
+                                data-ng-really-click="deletePost(lesson.lecture_id, $index)"
                                 data-ng-if="currentUser.userRole == 'admin'">
                             <span class="glyphicon glyphicon-erase" aria-hidden="true"></span>
                         </button>
